extends VBoxContainer



func _on_Button_pressed():
	get_tree().change_scene("res://Baju/Info/AesanInfo.tscn")


func _on_Button2_pressed():
	get_tree().change_scene("res://Baju/Info/BabungInfo.tscn")


func _on_Button3_pressed():
	get_tree().change_scene("res://Baju/Info/BaduyInfo.tscn")


func _on_Button4_pressed():
	get_tree().change_scene("res://Baju/Info/BagajahInfo.tscn")


func _on_Button5_pressed():
	get_tree().change_scene("res://Baju/Info/BagasiInfo.tscn")


func _on_Button6_pressed():
	get_tree().change_scene("res://Baju/Info/BaliInfo.tscn")


func _on_Button7_pressed():
	get_tree().change_scene("res://Baju/Info/BelangaInfo.tscn")


func _on_Button8_pressed():
	get_tree().change_scene("res://Baju/Info/BetawiInfo.tscn")


func _on_Button9_pressed():
	get_tree().change_scene("res://Baju/Info/BodoSubarInfo.tscn")


func _on_Button10_pressed():
	get_tree().change_scene("res://Baju/Info/Bodosulsel.tscn")


func _on_Button11_pressed():
	get_tree().change_scene("res://Baju/Info/BundoInfo.tscn")


func _on_Button12_pressed():
	get_tree().change_scene("res://Baju/Info/CeleInfo.tscn")
